--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html,
 body {
   height: 100%;
   font-family: sans-serif;
+  overscroll-behavior: none; /* Prevent bounce or stretching */
 }
 
 #root {
